# ahmedamsoliman-1

./: .gitignore  .hintrc  README.md  aams-all.postman_collection.json  aams-links.txt  app.js  asset-manifest.json  badges.html  cpp-mode-bin  error.html  games.css  images.txt  index.css  index.html  message.txt  package-lock.json  package.json  render.yaml  update-git.sh  update_git.sh
.github/flows/: build-cpp-project-cppnd-system-monitor.yml  destroy-terraform.yaml  enable-google-cloud-apis.yml  terraform-gcp-big-star-destory.yaml
.github/sus_workflows/: deploy-to-x-kubernetes-cluster.yml
.github/workflows/: apply-branch-protection.yml  artifact-create.yaml  artifcat-use.yaml  build-cpp-project-cppnd-system-monitor.yml  build-latex-documents.yml  build-push-cv-docker-images-2-hub.yml  build-push-docker-images-2-hub-portfolio.yml  build-push-docker-images-2-hub-resumes.yml  build-push-docker-images-2-hub.yml  build-push-docker-images-overleaf-hub.yml  build-push-image-personal-cloud.yml  build-push-images-2-hub.yml  cpp-build.yaml  deploy-helm-charts.yml  deploy-to-github-pages.yaml  deploy-to-github-pages.yml  deploy-to-x-kubernetes-cluster.yml  different.yaml  (+19 more)
apps/: .gitignore  docker-compose.dotnet.yaml  docker-compose.images.yaml  docker-compose.iot.yaml  docker-compose.ts.yaml  docker-compose.yaml  images.txt
apps/Cpp/cppwebapp1/: .gitignore  CMakeLists.txt  Dockerfile  Makefile
apps/Cpp/cppwebapp1/src/: main.cpp
cloud/: .gitignore
docs/: icons.md
middleware/: index.js
scripts/: .gitignore  README.md  houndify.js  update_git.sh
src/: App.tsx
(+1059 files in other folders)
